changes in .gitignore files and added yarn.lock

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
 # Created by .ignore support plugin (hsz.mobi)
+/.idea/be-the-hero.iml
+/.idea/codestream.xml
+/.idea/dataSources.xml
+/.idea/dbnavigator.xml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/codeStyles/Project.xml
+/.idea/inspectionProfiles/Project_Default.xml
+/.idea/vcs.xml
